# rag-chatbot

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/rag/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/rag/migrations/: 0001_initial.py  0002_alter_documentchunk_embedding.py  0003_asset_documentchunk_asset_and_more.py  0004_chatsession_chatmessage_and_more.py
backend/rag/pipeline/: generator.py  query_classifier.py  retriever.py
backend/rag/prompts/: __init__.py  classifier.py  rag.py
backend/rag/services/: chunker.py  cloudinary_service.py  document_processor.py  embeddings.py  image_processor.py  llm.py  ocr_service.py  vision_service.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/chat/: ChatSidebar.tsx  ChatWindow.tsx  MessageBubble.tsx
frontend/src/components/documents/: AssetList.tsx  FileUploader.tsx
frontend/src/components/layout/: AppLayout.tsx  AppSidebar.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ChatPage.tsx  DocumentsPage.tsx  LoginPage.tsx  RegisterPage.tsx
